docker compose test

--- a/apps/react-client/nginx.conf
+++ b/apps/react-client/nginx.conf
@@ -44,7 +44,7 @@ http {
     # configuration of HTTP virtual server 1
     location /api {
       # configuration for processing URIs starting with '/api'
-      proxy_pass http://api-server:8987/api;
+      proxy_pass http://nest-server:8987/api;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-NginX-Proxy true;
