--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -8,14 +8,11 @@ services:
   nest-server:
     container_name: nest-server
     build:
-      context: ./
-      cache_from:
-        - my-base-image:nx-base
-      dockerfile: ./apps/nest-server/Dockerfile
+      context: ./apps/nest-server
+      dockerfile: ./Dockerfile
       args:
         NODE_ENV: "development"
         BUILD_FLAG: ""
-    image: nest-server:nx-dev
     ports:
       - 4939:4939
     environment:
@@ -28,14 +25,13 @@ services:
   react-client:
     container_name: react-client
     build:
-      context: ./
+      context: ./apps/react-client
       cache_from:
         - nginx:1.19.2
-      dockerfile: ./apps/react-client/Dockerfile
+      dockerfile: ./Dockerfile
       args:
         NODE_ENV: "development"
         BUILD_FLAG: ""
-    image: react-client:nx-dev
     ports:
       - 4900:80
     environment:
