--- a/apps/react-client/Dockerfile
+++ b/apps/react-client/Dockerfile
@@ -1,14 +1,15 @@
-FROM my-base-image:nx-base AS builder
+FROM node:lts-alpine3.10 as builder
 
 ARG NODE_ENV
 ARG BUILD_FLAG
-WORKDIR /app/builder
+WORKDIR /react-client
 COPY . .
-RUN npx nx build react-client ${BUILD_FLAG}
+RUN npm i
+RUN npm run-script build
+
 
 FROM nginx:1.19.2
 
 WORKDIR /usr/share/nginx/html
-
-COPY --from=builder /app/builder/dist/apps/react-client ./
-COPY --from=builder /app/builder/apps/react-client/nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /react-client/build /usr/share/nginx/html
+COPY --from=builder /react-client/nginx.conf /etc/nginx/nginx.conf
