--- a/apps/nest-server/Dockerfile
+++ b/apps/nest-server/Dockerfile
@@ -2,15 +2,18 @@ FROM node:lts-alpine3.10 as builder
 
 ARG NODE_ENV
 ARG BUILD_FLAG
-WORKDIR /nest-server
+WORKDIR /nest-server/builder
 
 COPY . .
 RUN npm i
 RUN npx @nestjs/cli build
 
+
+
 FROM node:lts-alpine3.10
 
-COPY --from=builder /nest-server/dist ./
+WORKDIR /nest-server
+COPY --from=builder /nest-server/builder ./
 ENV NODE_ENV=$NODE_ENV
 
 CMD ["node", "./dist/main.js"]
