--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
