--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@reduxjs/toolkit": "^1.8.0",
+    "@types/react-redux": "^7.1.23",
+    "immer": "^9.0.12",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
