--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -29,6 +29,7 @@
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.3",
     "pug": "^3.0.2",
+    "react-scripts": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
