--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^8.4.3",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.3",
     "@nestjs/platform-express": "^8.4.3",
     "ejs": "^3.1.6",
