--- a/apps/nest-server/.prettierrc
+++ b/apps/nest-server/.prettierrc
@@ -1,4 +1,26 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "singleQuote": "true",
+
+    "semi": "true",
+
+    "useTabs": "false",
+
+    "tabWidth": 4,
+
+    "trailingComma": "all",
+
+    "printWidth": 80,
+
+    "arrowParens": "avoid",
+
+    "endOfLine": "auto",
+    "overrides": [ 
+      {
+        "files": "*.json",
+        "options": {
+          "printWidth": 200
+        }
+      }
+    ],
+    "prettier/prettier": ["error", {"singleQuote": true, "parser": "flow"}]
 }
