--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.3",
     "@nestjs/platform-express": "^8.4.3",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.3",
@@ -46,7 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.6.1",
