--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -17,6 +17,9 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.8",
+    "store": "^2.0.12",
+    "styled-components": "^5.3.5",
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
