--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.8",
+    "redux-logger": "^3.0.6",
     "store": "^2.0.12",
     "styled-components": "^5.3.5",
     "typesafe-actions": "^5.1.0"
@@ -25,6 +26,8 @@
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
+    "@types/store": "^2.0.2",
+    "@types/styled-components": "^5.1.24",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
