--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
     "iamport-typings": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/redux-logger": "^3.0.9",
+    "redux-thunk": "^2.4.1",
+    "typescript": "^4.6.3"
   }
 }
