--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.4.0",
-    "@reduxjs/toolkit": "^1.8.0",
+    "@emailjs/browser": "^3.5.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/react-redux": "^7.1.23",
+    "iamport-typings": "^1.3.0",
     "immer": "^9.0.12",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "^18.0.0",
     "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "store": "^2.0.12",
     "styled-components": "^5.3.5",
