--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -21,7 +21,6 @@
     "react-is": "^18.0.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "store": "^2.0.12",
     "styled-components": "^5.3.5",
@@ -30,10 +29,12 @@
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
+    "@types/redux-logger": "^3.0.9",
     "@types/store": "^2.0.2",
     "@types/styled-components": "^5.1.24",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "4.6.2"
   }
 }
