--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -12,9 +12,12 @@
     "@emailjs/browser": "^3.5.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-redux": "^7.1.23",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "iamport-typings": "^1.3.0",
     "immer": "^9.0.12",
     "next": "12.1.0",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,11 +25,13 @@
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "store": "^2.0.12",
     "styled-components": "^5.3.5",
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
+    "@types/next-redux-saga": "^3.0.2",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
     "@types/redux-logger": "^3.0.9",
