--- a/apps/pm2/Dockerfile
+++ b/apps/pm2/Dockerfile
@@ -4,12 +4,15 @@ FROM node:alpine
 # Set working directory
 WORKDIR /usr/app
 
+# Install PM2 globally
+RUN npm install --global pm2
+
 # Copy package.json and package-lock.json before other files
 # Utilise Docker cache to save re-installing dependencies if unchanged
 COPY ./package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --production
 
 # Copy all files
 COPY ./ ./
@@ -24,5 +27,5 @@ EXPOSE 3000
 # The node user is provided in the Node.js Alpine base image
 USER node
 
-# Run npm start script when container starts
-CMD [ "npm", "start" ]
+# Run npm start script with PM2 when container starts
+CMD [ "pm2-runtime", "npm", "--", "start" ]
