--- a/apps/next-client/package.json
+++ b/apps/next-client/package.json
@@ -37,9 +37,7 @@
     "@types/redux-logger": "^3.0.9",
     "@types/store": "^2.0.2",
     "@types/styled-components": "^5.1.24",
-    "eslint": "8.1.0",
-    "eslint-config-next": "12.1.0",
     "redux-devtools-extension": "^2.13.9",
-    "typescript": "4.7.0"
+    "typescript": "^4.6.3"
   }
 }
