--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^8.4.3",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.3",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.3",
     "dotenv": "^16.0.0",
@@ -32,6 +33,7 @@
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "react-scripts": "^5.0.0",
@@ -46,6 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
