auth 및 google token 작업

--- a/apps/nest-server/.development.env
+++ b/apps/nest-server/.development.env
@@ -10,3 +10,8 @@ DATABASE_HOST=127.0.0.1
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=1234
 DATABASE_SYNCHRONIZE=true
+
+JWT_ACCESS_TOKEN_SECRET=AccessTokenSecretTest
+JWT_ACCESS_TOKEN_EXPIRATION_TIME=10
+JWT_REFRESH_TOKEN_SECRET=RefreshTokenSecretTest
+JWT_REFRESH_TOKEN_EXPIRATION_TIME=604800
