auth jwt 인증, cookie 생성

--- a/apps/nest-server/.development.env
+++ b/apps/nest-server/.development.env
@@ -15,3 +15,6 @@ JWT_ACCESS_TOKEN_SECRET=AccessTokenSecretTest
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=10
 JWT_REFRESH_TOKEN_SECRET=RefreshTokenSecretTest
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=604800
+
+DOMAIN=localhost
+PORT=4939
