--- a/apps/nest-server/.prettierrc
+++ b/apps/nest-server/.prettierrc
@@ -1,6 +1,5 @@
 {
   "tabWidth": 2,
-  "trailingComma": "all",
   "printWidth": 80,
   "arrowParens": "avoid",
   "endOfLine": "auto",
@@ -12,5 +11,6 @@
       }
     }
   ],
-  "prettier/prettier": ["error", {"singleQuote": true, "parser": "flow"}]
+  "prettier/prettier": ["error", {"singleQuote": true,"parser": "@babel/eslint-parser"}]
+
 }
