--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/hapi__joi": "^17.1.8",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
