--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -31,9 +31,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.4.4",
+    "@socket.io/redis-adapter": "^7.2.0",
     "@types/hapi__joi": "^17.1.8",
+    "amqp-connection-manager": "^4.1.3",
+    "amqplib": "^0.9.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -48,11 +53,13 @@
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "react-scripts": "^5.0.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.5.0",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.3.6",
+    "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
