--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -40,6 +40,7 @@
     "amqp-connection-manager": "^4.1.3",
     "amqplib": "^0.9.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
