--- a/apps/redis-server/package.json
+++ b/apps/redis-server/package.json
@@ -21,10 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@liaoliaots/nestjs-redis": "^8.2.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.4.5",
     "@nestjs/platform-express": "^8.0.0",
+    "cache-manager": "^3.6.3",
+    "cache-manager-ioredis": "^2.1.0",
+    "ioredis": "^5.0.5",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -34,6 +38,8 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager": "^3.4.3",
+    "@types/cache-manager-ioredis": "^2.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
