--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -41,6 +41,7 @@
     "amqplib": "^0.9.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
