--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^8.4.6",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^8.4.6",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.6",
     "@nestjs/platform-socket.io": "^8.4.6",
