--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "nodemon --config nodemon-debug.json",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -50,6 +50,7 @@
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nest-winston": "^1.6.2",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
@@ -63,7 +64,8 @@
     "socket.io": "^4.5.1",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.2.34",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.2",
@@ -89,6 +91,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.2.3",
