--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,25 @@
 {
-    // IntelliSense를 사용하여 가능한 특성에 대해 알아보세요.
-    // 기존 특성에 대한 설명을 보려면 가리킵니다.
-    // 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387을(를) 방문하세요.
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch Chrome",
-            "request": "launch",
-            "type": "pwa-chrome",
-            "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
-            "type": "pwa-node",
-            "request": "launch",
-            "name": "Next: Node",
-            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/next"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "Debug Nest Framework",
+          "args": [
+              "${workspaceFolder}/app/nest-server/src/main.ts"
+          ],
+          "runtimeArgs": [
+              "--nolazy",
+              "-r",
+              "ts-node/register",
+              "-r",
+              "tsconfig-paths/register"
+          ],
+          "sourceMaps": true,
+          "envFile": "${workspaceFolder}/.env",
+          "cwd": "${workspaceRoot}",
+          "console": "integratedTerminal",
+          "protocol": "inspector"
+      }
+  ]
 }
