--- a/apps/nest-server/.development.env
+++ b/apps/nest-server/.development.env
@@ -20,3 +20,13 @@ JWT_REFRESH_TOKEN_EXPIRATION_TIME=604800
 
 DOMAIN=localhost
 PORT=4939
+
+{ 
+  error: 0, 
+  warn: 1, 
+  info: 2, 
+  http: 3,
+  verbose: 4, 
+  debug: 5, 
+  silly: 6 
+}
