--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -42,6 +42,8 @@
     "amqplib": "^0.9.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^4.0.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -73,6 +75,7 @@
     "@nestjs/schematics": "^8.0.10",
     "@nestjs/testing": "^8.4.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^4.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
