--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -13,6 +13,7 @@
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nodemon --config nodemon-debug.json",
     "start:prod": "node dist/main",
+    "start:production": "NODE_ENV=production nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
