--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+
+# .env
+/app/nest-server/.development.env
+/app/nest-server/.production.env
