--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -23,11 +23,13 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.2.1",
     "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^8.4.6",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.6",
+    "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^8.4.6",
