--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -43,6 +43,7 @@
     "@types/hapi__joi": "^17.1.8",
     "amqp-connection-manager": "^4.1.3",
     "amqplib": "^0.9.1",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^4.0.1",
