redis-server 주석 처리

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,13 @@ services:
     networks:
       - corp
     restart: on-failure
-  redis-server:
-    container_name: redis-server
-    image: redis:latest
-    restart: always
-    ports:
-      - 6379:6379
-    command: redis-server
+  # redis-server:
+  #   container_name: redis-server
+  #   image: redis:latest
+  #   restart: always
+  #   ports:
+  #     - 6379:6379
+  #   command: redis-server
 
 
 
