--- a/apps/nest-server/package.json
+++ b/apps/nest-server/package.json
@@ -69,6 +69,7 @@
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.1",
     "swagger-ui-express": "^4.4.0",
+    "typeorm": "^0.3.10",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
   },
